# mdbook-man

./: CHANGELOG.md  Cargo.toml  README.md  custom-name.man
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
src/: lib.rs  main.rs
