[package]
name = "mdbook-man"
description = "A backend for mdBook that generates man pages"
repository = "https://github.com/vv9k/mdbook-man"
homepage = "https://github.com/vv9k/mdbook-man"
authors = ["Wojciech Kępka <wojciech@wkepka.dev>"]
keywords = ["mdbook", "man", "manpages", "documentation"]
categories = ["command-line-interface", "development-tools"]
license = "MIT"
readme = "README.md"
version = "0.1.0"
edition = "2018"

[[bin]]
path = "./src/main.rs"
name = "mdbook-man"

[dependencies]
mdbook = "0.4"
comrak = "0.11"
roffman = "0.3"
serde = { version = "1", features = ["derive"] }
